src/test/deca/context/valid/def_affect/affect-string.deca
// Description:
//    Affectation d'une chaine.
//
// Resultats:
//    erreur undefined type

{
    String a = "bonjour";
}