src/test/deca/context/invalid/def_affect/void-decl.deca
// Description:
//    Programme invalide.
//
// Resultats:
//    erreur ligne 13

{
    void a;
}